--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,76 @@
-#main-menu {
-  background-color: #Black;
-}
-
-#main-navbar{
-  background-color: #b07922;
-  overflow: hidden;
-}
-
-#navbar-container {
-  float: center;
-  width: 100%;
-  position: relative;
-}
-#main-navbar ul {
-  position: relative;
-  float: left;
+#main-menu ul {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
+  position: relative;
   left: 50%;
+  float:left;
+  text-align: center;
 }
 
-#main-navbar ul li{
+#main-menu ul li {
   display: block;
-  float: left;
   position: relative;
-   margin: 5px;
-  padding: 10px;
   right: 50%;
+  float: left;
 }
 
-#main-navbar ul li a {
-  padding: 20px 120px;
-  color: black;
+#main-menu ul li a {
   display: block;
-  border: 6px solid;
+  padding: 15px 10px;
+  text-decoration: none;
+  color: white;
 }
 
-#main-navbar ul li a:hover {
-  background-color: black;
+#main-menu ul li a:hover {
+  background-color: Black;
 }
 
-ul,li {
- text-align: center;
- font-family: "Lato";
+#main-menu ul li a:link {
+  color: #b07922;
+  text-decoration: none;
+  font-family: Arial, sans-serif;
 }
 
-li{
- text-align: center;
- font-family:"Lato";
-list-style-type: none;
-padding: 10px;
-margin: 10px;
+h1, h2 {
+    font-size: 30px;
+    color: #b07922;
+    font-family: lato;
 }
 
-h1,h2,h3{
-  float: none;
-  background: black;
-  position: relative;
-  border: 7px solid;
-  border-color: #b07922;
-  text-align: center;
-  padding: 30px;
+p {
+    font-size: 18px;
+    color: white;
+    font-family: Georgia, Times, serif;
+}
+
+li, ul {
+    font-size: 18px;
+    color: white;
+}
+
+h3, h4{
+    color: #b07922;
+}
+body {
+    background-color:black;
+    font-family: lato;
+}
+
+img {
+  width: 500px;
+  height: auto;
+  border: 5px;
+  border-radius: 10px;
   display: block;
-  margin: 0px;
-  padding: 5px;
-  text-align: center;
-  font-family: "lato";
+  margin-left: auto;
+  margin-right: auto;
+}
+
+iframe {
+  width: 560px;
+  height: 315px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
