--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ h4{
     text-align: center;
 }
 body {
-    background-color:black;
-    font-family: lato;
+    background-color: black;
+    font-family: Georgia, Times, serif;
 }
 
 img {
