--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+#main-menu {
+  background-color: black;
+  overflow: hidden;
+  border: 5px;
+  border-radius: 5px;
+}
+
+#menu-container {
+  position: relative;
+  width: 100%;
+  float: left;
+}
+
+p {
+  color: white
+}
+
 #main-menu ul {
   list-style-type: none;
   padding: 0;
@@ -23,69 +40,42 @@
 }
 
 #main-menu ul li a:hover {
-  background-color: Black;
+  background-color: gray;
 }
 
 #main-menu ul li a:link {
-  color: #b07922;
+  color: black;
   text-decoration: none;
   font-family: Arial, sans-serif;
 }
 
-nav a {
-  text-decoration: none;
-  color: white;
-   text-align: center;
+body {
+  background-color: #DA9F0B;
+  font-family: "Times New Roman", Times, serif;
 }
-
-nav ul {
-  list-style: none;
-   text-align: center;
-}
-
-nav li {
-  display: inline;
-  margin: 0 20px;
-   text-align: center;
-}
-
 
 section {
-  background-color: #b07922;
-  margin: 20px;
+  background-color: #DA9F0B;
+  width: 800px;
+  display: block;
+  margin: 20px auto;
   padding: 20px;
   border-radius: 5px;
 }
 
-h1, h2 {
-    font-size: 30px;
-    color: #b07922;
-    font-family: lato;
-    text-align: center;
+h1, h3 {
+  text-align: center;
+  text-decoration: underline;
 }
 
-p {
-    font-size: 18px;
-    color: white;
-    font-family: Georgia, Times, serif;
+.skyline {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
-li, ul {
-    font-size: 18px;
-    color: white;
-}
-
-h3{
-    color: white;
-}
-
-h4{
-    color: #b07922;
-    text-align: center;
-}
-body {
-    background-color: black;
-    font-family: Georgia, Times, serif;
+.skyline-caption {
+  text-align: center;
 }
 
 img {
