--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,93 @@
 #main-menu {
-  background-color: #Black;
-}
-
-#main-navbar{
-  background-color: #b07922;
+  background-color: #FF6961;
   overflow: hidden;
+  border: 5px;
+  border-radius: 5px;
 }
 
-#navbar-container {
-  float: center;
+#menu-container {
+  position: relative;
   width: 100%;
-  position: relative;
-}
-#main-navbar ul {
-  position: relative;
   float: left;
+}
+
+#main-menu ul {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
+  position: relative;
   left: 50%;
+  float:left;
+  text-align: center;
 }
 
-#main-navbar ul li{
+#main-menu ul li {
   display: block;
-  float: left;
   position: relative;
-   margin: 5px;
-  padding: 10px;
   right: 50%;
+  float: left;
 }
 
-#main-navbar ul li a {
-  padding: 20px 120px;
+#main-menu ul li a {
+  display: block;
+  padding: 15px 10px;
+  text-decoration: none;
+  color: white;
+}
+
+#main-menu ul li a:hover {
+  background-color: gray;
+}
+
+#main-menu ul li a:link {
   color: black;
+  text-decoration: none;
+  font-family: Arial, sans-serif;
+}
+
+body {
+  background-color: maroon;
+  font-family: "Times New Roman", Times, serif;
+}
+
+section {
+  background-color: #ffcfcf;
+  width: 800px;
   display: block;
-  border: 6px solid;
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 5px;
 }
 
-#main-navbar ul li a:hover {
-  background-color: black;
-}
-
-ul,li {
- text-align: center;
- font-family: "Lato";
-}
-
-li{
- text-align: center;
- font-family:"Lato";
-list-style-type: none;
-padding: 10px;
-margin: 10px;
-}
-
-h1,h2,h3{
-  float: none;
-  background: black;
-  position: relative;
-  border: 7px solid;
-  border-color: #b07922;
+h1, h3 {
   text-align: center;
-  padding: 30px;
+  text-decoration: underline;
+}
+
+.skyline {
+  margin-left: auto;
+  margin-right: auto;
   display: block;
-  margin: 0px;
-  padding: 5px;
+}
+
+.skyline-caption {
   text-align: center;
-  font-family: "lato";
+}
+
+img {
+  width: 500px;
+  height: auto;
+  border: 5px;
+  border-radius: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+iframe {
+  width: 560px;
+  height: 315px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
